z-index repair

--- a/css/page.css
+++ b/css/page.css
@@ -319,7 +319,6 @@ body{
   min-height: 100%;
   min-width: 100%;
   max-height: 100vh;
-  z-index: -1;
 }
 
 #footer{
